// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "Alarm7103F465": Object {
      "Properties": Object {
        "DashboardBody": "{\\"widgets\\":[]}",
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
    "Resource": Object {
      "Properties": Object {
        "DashboardBody": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"widgets\\":[{\\"type\\":\\"text\\",\\"width\\":24,\\"height\\":1,\\"x\\":0,\\"y\\":0,\\"properties\\":{\\"markdown\\":\\"### Secrets Manager Secrets **SecretsManager**\\"}},{\\"type\\":\\"metric\\",\\"width\\":8,\\"height\\":5,\\"x\\":0,\\"y\\":1,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Secret Count\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/SecretsManager\\",\\"ResourceCount\\",\\"Class\\",\\"None\\",\\"Resource\\",\\"SecretCount\\",\\"Service\\",\\"Secrets Manager\\",\\"Type\\",\\"Resource\\",{\\"label\\":\\"Count\\",\\"period\\":3600}]],\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"Count\\",\\"showUnits\\":false}}}}]}",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
    "Summary68521F81": Object {
      "Properties": Object {
        "DashboardBody": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"widgets\\":[{\\"type\\":\\"text\\",\\"width\\":24,\\"height\\":1,\\"x\\":0,\\"y\\":0,\\"properties\\":{\\"markdown\\":\\"### Secrets Manager Secrets **SecretsManager**\\"}},{\\"type\\":\\"metric\\",\\"width\\":12,\\"height\\":6,\\"x\\":0,\\"y\\":1,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Secret Count\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/SecretsManager\\",\\"ResourceCount\\",\\"Class\\",\\"None\\",\\"Resource\\",\\"SecretCount\\",\\"Service\\",\\"Secrets Manager\\",\\"Type\\",\\"Resource\\",{\\"label\\":\\"Count\\",\\"period\\":3600}]],\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"Count\\",\\"showUnits\\":false}}}}]}",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`snapshot test: all alarms 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "Alarm7103F465": Object {
      "Properties": Object {
        "DashboardBody": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"widgets\\":[{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":4,\\"x\\":0,\\"y\\":0,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"annotations\\":{\\"alarms\\":[\\"",
              Object {
                "Fn::GetAtt": Array [
                  "ScopeTestSecretsManagerSecretsCountMaxWarning9EE14055",
                  "Arn",
                ],
              },
              "\\"]},\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":4,\\"x\\":6,\\"y\\":0,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"annotations\\":{\\"alarms\\":[\\"",
              Object {
                "Fn::GetAtt": Array [
                  "ScopeTestSecretsManagerSecretsCountMinWarning40C64CA4",
                  "Arn",
                ],
              },
              "\\"]},\\"yAxis\\":{}}},{\\"type\\":\\"metric\\",\\"width\\":6,\\"height\\":4,\\"x\\":12,\\"y\\":0,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"annotations\\":{\\"alarms\\":[\\"",
              Object {
                "Fn::GetAtt": Array [
                  "ScopeTestSecretsManagerSecretsCountChangeWarning78F355CB",
                  "Arn",
                ],
              },
              "\\"]},\\"yAxis\\":{}}}]}",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
    "Resource": Object {
      "Properties": Object {
        "DashboardBody": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"widgets\\":[{\\"type\\":\\"text\\",\\"width\\":24,\\"height\\":1,\\"x\\":0,\\"y\\":0,\\"properties\\":{\\"markdown\\":\\"### Secrets Manager Secrets **SecretsManager**\\"}},{\\"type\\":\\"metric\\",\\"width\\":8,\\"height\\":5,\\"x\\":0,\\"y\\":1,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Secret Count\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/SecretsManager\\",\\"ResourceCount\\",\\"Class\\",\\"None\\",\\"Resource\\",\\"SecretCount\\",\\"Service\\",\\"Secrets Manager\\",\\"Type\\",\\"Resource\\",{\\"label\\":\\"Count\\",\\"period\\":3600}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"Count > 5 for 1 datapoints within 60 minutes\\",\\"value\\":5,\\"yAxis\\":\\"left\\"},{\\"label\\":\\"Count < 3 for 1 datapoints within 60 minutes\\",\\"value\\":3,\\"yAxis\\":\\"left\\"},{\\"label\\":\\"Count > 4 for 1 datapoints within 60 minutes\\",\\"value\\":4,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"Count\\",\\"showUnits\\":false}}}}]}",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
    "ScopeTestSecretsManagerSecretsCountChangeWarning78F355CB": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Secret count: Secret count has increased.",
        "AlarmName": "Test-SecretsManager-Secrets-Count-Change-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 1,
        "EvaluationPeriods": 1,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "Count",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "Class",
                    "Value": "None",
                  },
                  Object {
                    "Name": "Resource",
                    "Value": "SecretCount",
                  },
                  Object {
                    "Name": "Service",
                    "Value": "Secrets Manager",
                  },
                  Object {
                    "Name": "Type",
                    "Value": "Resource",
                  },
                ],
                "MetricName": "ResourceCount",
                "Namespace": "AWS/SecretsManager",
              },
              "Period": 3600,
              "Stat": "Average",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 4,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestSecretsManagerSecretsCountMaxWarning9EE14055": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Number of secrets is too high.",
        "AlarmName": "Test-SecretsManager-Secrets-Count-Max-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 1,
        "EvaluationPeriods": 1,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "Count",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "Class",
                    "Value": "None",
                  },
                  Object {
                    "Name": "Resource",
                    "Value": "SecretCount",
                  },
                  Object {
                    "Name": "Service",
                    "Value": "Secrets Manager",
                  },
                  Object {
                    "Name": "Type",
                    "Value": "Resource",
                  },
                ],
                "MetricName": "ResourceCount",
                "Namespace": "AWS/SecretsManager",
              },
              "Period": 3600,
              "Stat": "Average",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestSecretsManagerSecretsCountMinWarning40C64CA4": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Number of secrets is too low.",
        "AlarmName": "Test-SecretsManager-Secrets-Count-Min-Warning",
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 1,
        "EvaluationPeriods": 1,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "Count",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "Class",
                    "Value": "None",
                  },
                  Object {
                    "Name": "Resource",
                    "Value": "SecretCount",
                  },
                  Object {
                    "Name": "Service",
                    "Value": "Secrets Manager",
                  },
                  Object {
                    "Name": "Type",
                    "Value": "Resource",
                  },
                ],
                "MetricName": "ResourceCount",
                "Namespace": "AWS/SecretsManager",
              },
              "Period": 3600,
              "Stat": "Average",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 3,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Summary68521F81": Object {
      "Properties": Object {
        "DashboardBody": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"widgets\\":[{\\"type\\":\\"text\\",\\"width\\":24,\\"height\\":1,\\"x\\":0,\\"y\\":0,\\"properties\\":{\\"markdown\\":\\"### Secrets Manager Secrets **SecretsManager**\\"}},{\\"type\\":\\"metric\\",\\"width\\":12,\\"height\\":6,\\"x\\":0,\\"y\\":1,\\"properties\\":{\\"view\\":\\"timeSeries\\",\\"title\\":\\"Secret Count\\",\\"region\\":\\"",
              Object {
                "Ref": "AWS::Region",
              },
              "\\",\\"metrics\\":[[\\"AWS/SecretsManager\\",\\"ResourceCount\\",\\"Class\\",\\"None\\",\\"Resource\\",\\"SecretCount\\",\\"Service\\",\\"Secrets Manager\\",\\"Type\\",\\"Resource\\",{\\"label\\":\\"Count\\",\\"period\\":3600}]],\\"annotations\\":{\\"horizontal\\":[{\\"label\\":\\"Count > 5 for 1 datapoints within 60 minutes\\",\\"value\\":5,\\"yAxis\\":\\"left\\"},{\\"label\\":\\"Count < 3 for 1 datapoints within 60 minutes\\",\\"value\\":3,\\"yAxis\\":\\"left\\"},{\\"label\\":\\"Count > 4 for 1 datapoints within 60 minutes\\",\\"value\\":4,\\"yAxis\\":\\"left\\"}]},\\"yAxis\\":{\\"left\\":{\\"min\\":0,\\"label\\":\\"Count\\",\\"showUnits\\":false}}}}]}",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::Dashboard",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
